--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
 
   <style>
     :root{
-      /* Brand */
-      --brand:#2C1C14;
-      --brand2:#463326;
-      --olive:#6F7C4B;
-      --warm:#4E4A45;
+      --brand:#2C1C14;     /* marrone profondo */
+      --olive:#6F7C4B;     /* oliva soft */
 
-      /* Premium clean */
       --bg:#FFFFFF;
       --cream:#FBF8F5;
       --card:#FFFFFF;
@@ -74,7 +70,7 @@
       display:flex;
       justify-content:center;
       padding: clamp(14px, 3.8vw, 22px) 16px;
-      background: linear-gradient(180deg, rgba(255,255,255,.98), rgba(255,255,255,1));
+      background:#fff;
       border-bottom:1px solid var(--line);
     }
     .logo{
@@ -86,10 +82,10 @@
       transform: translateZ(0);
     }
 
-    /* HERO */
+    /* HERO (pulito, impattante) */
     .hero{
       position:relative;
-      padding:22px 18px 16px;
+      padding:18px 18px 14px;
       text-align:center;
       background: var(--cream);
       overflow:hidden;
@@ -99,7 +95,7 @@
       position:absolute;
       inset:0;
       background:
-        linear-gradient(rgba(251,248,245,.92), rgba(251,248,245,.92)),
+        linear-gradient(rgba(251,248,245,.94), rgba(251,248,245,.94)),
         url("./hero-bg.jpg") center / cover no-repeat;
       filter: grayscale(6%) contrast(.98) brightness(1.03);
       z-index:0;
@@ -114,22 +110,15 @@
       font-weight:800;
       color: var(--brand);
     }
-    .tagline{
-      margin:10px 0 0;
-      font-weight:700;
-      color: var(--olive);
-      letter-spacing:.02em;
-    }
 
     .divider{
-      width:72px;
+      width:64px;
       height:2px;
-      margin:12px auto 0;
+      margin:10px auto 0;
       background: rgba(111,124,75,.55);
       border-radius:999px;
     }
 
-    /* ✅ microcopy QR universale */
     .qrhint{
       margin:12px auto 0;
       display:inline-flex;
@@ -141,58 +130,38 @@
       background: rgba(255,255,255,.72);
       color: rgba(78,74,69,.90);
       font-size:12px;
-      font-weight:800;
+      font-weight:900;
     }
 
     .sub{
-      margin:12px auto 0;
+      margin:10px auto 0;
       max-width:580px;
       color: var(--muted);
-      font-size:14px;
-      line-height:1.55;
-      font-weight:500;
+      font-size:13.5px;
+      line-height:1.45;
+      font-weight:600;
     }
-    .sub strong{font-weight:800;color:var(--brand);}
+    .sub strong{font-weight:900;color:var(--brand);}
 
-    /* Trust chips */
     .trust{
-      margin:12px auto 0;
+      margin:10px auto 0;
       display:flex;
-      gap:10px;
+      gap:8px;
       justify-content:center;
       flex-wrap:wrap;
-      font-size:12px;
+      font-size:11.5px;
       color: rgba(78,74,69,.86);
-      font-weight:800;
+      font-weight:900;
     }
     .trust span{
-      padding:8px 10px;
+      padding:7px 9px;
       border:1px solid rgba(44,28,20,.10);
       border-radius:999px;
       background: rgba(255,255,255,.75);
       backdrop-filter: blur(8px);
     }
 
-    /* Video */
-    .video{
-      margin:14px auto 0;
-      max-width: 600px;
-      border-radius:18px;
-      overflow:hidden;
-      box-shadow: 0 14px 30px rgba(0,0,0,.10);
-      border:1px solid rgba(44,28,20,.10);
-      background:#000;
-    }
-    .video iframe{
-      display:block;
-      width:100%;
-      height: 220px;
-    }
-    @media (min-width:520px){
-      .video iframe{height: 280px;}
-    }
-
-    /* ✅ Azioni top: WhatsApp + Chiama + Naviga */
+    /* AZIONI TOP */
     .actions{
       padding:14px 18px 18px;
       display:grid;
@@ -236,14 +205,13 @@
       box-shadow:0 14px 26px rgba(44,28,20,.18);
     }
 
+    /* SEZIONI */
     .section{
       border-top:1px solid var(--line);
       padding:18px;
       background:#fff;
     }
-    .section.alt{
-      background: var(--cream);
-    }
+    .section.alt{ background: var(--cream); }
     .section h2{
       margin:0 0 12px;
       font-size:13px;
@@ -273,9 +241,7 @@
       transition: box-shadow .18s ease, transform .08s ease, border-color .18s ease;
       min-width:0;
     }
-    .section.alt .tile{
-      background: rgba(255,255,255,.92);
-    }
+    .section.alt .tile{ background: rgba(255,255,255,.92); }
     .tile:hover{
       box-shadow:var(--shadow2);
       transform:translateY(-1px);
@@ -283,7 +249,7 @@
     }
 
     .tile b{display:block; font-weight:900; color:var(--brand);}
-    .small{color:rgba(78,74,69,.85);font-size:13px;margin-top:4px;line-height:1.45;font-weight:500}
+    .small{color:rgba(78,74,69,.85);font-size:13px;margin-top:4px;line-height:1.45;font-weight:600}
     .tile a{color:inherit;text-decoration:none}
     .tile a:hover{text-decoration:underline}
 
@@ -307,7 +273,7 @@
       color: currentColor;
     }
 
-    /* ✅ mini bottone dentro tile (per B2B) */
+    /* mini CTA B2B */
     .mini-cta{
       display:inline-flex;
       align-items:center;
@@ -316,14 +282,33 @@
       padding:10px 12px;
       border-radius:14px;
       border:1px solid rgba(44,28,20,.12);
-      background: rgba(255,255,255,.9);
+      background: rgba(255,255,255,.92);
       font-weight:900;
       text-decoration:none;
     }
     .mini-cta:hover{box-shadow:var(--shadow2); text-decoration:none}
     .mini-cta .i{margin-top:0}
 
-    /* Social */
+    /* VIDEO (solo per chi scorre) */
+    .video{
+      margin:14px auto 0;
+      max-width: 600px;
+      border-radius:18px;
+      overflow:hidden;
+      box-shadow: 0 14px 30px rgba(0,0,0,.10);
+      border:1px solid rgba(44,28,20,.10);
+      background:#000;
+    }
+    .video iframe{
+      display:block;
+      width:100%;
+      height: 220px;
+    }
+    @media (min-width:520px){
+      .video iframe{height: 280px;}
+    }
+
+    /* SOCIAL */
     .social-row{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -365,7 +350,7 @@
       letter-spacing:.01em;
     }
 
-    /* Sticky: WhatsApp primary + Chiama + Naviga */
+    /* STICKY */
     .sticky{
       position:fixed;
       left:0; right:0; bottom:0;
@@ -425,27 +410,26 @@
         <img class="logo" src="./logo%20moretti.jpg" alt="Azienda Agricola Moretti" loading="eager" decoding="async">
       </div>
 
+      <!-- ✅ HERO pulito -->
       <div class="hero">
         <h1>Azienda Agricola Moretti</h1>
-        <div class="tagline">Dal cuore dei Castelli Romani</div>
         <div class="divider"></div>
 
-        <!-- ✅ QR universal hint -->
         <div class="qrhint">📲 Scansiona per contatti, ordini e indicazioni</div>
 
         <div class="sub">
-          <strong>Produzione di funghi a km 0</strong> · Linea <strong>fresco</strong>, <strong>gelo</strong> e <strong>trasformati</strong><br>
-          Vendita <strong>al dettaglio</strong> e <strong>all’ingrosso</strong> · Marino &amp; Store Eataly Roma
+          <strong>Funghi km 0</strong> • Fresco • Gelo • Trasformati • B2B<br>
+          Marino &amp; Store Eataly Roma
         </div>
 
         <div class="trust" aria-label="Punti di forza">
           <span>✓ Produzione locale</span>
-          <span>✓ Forniture B2B</span>
-          <span>✓ Marino + Eataly Roma</span>
+          <span>✓ Marino + Eataly</span>
         </div>
       </div>
 
-      <!-- ✅ TOP CTA: WhatsApp + Chiama + Naviga (prima di tutto) -->
+      <!-- ✅ TOP CTA -->
+      <!-- TODO: sostituisci WHATSAPP_NUMBER con il numero reale (solo numeri: 39...) -->
       <div class="actions">
         <a class="btn primary"
            href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20ho%20scansionato%20il%20vostro%20QR%20code%20e%20vorrei%20informazioni%20su%20prodotti%20e%20disponibilit%C3%A0."
@@ -465,7 +449,6 @@
           Chiama ora
         </a>
 
-        <!-- ✅ Navigazione (full width su desktop) -->
         <a class="btn full"
            href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
            target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
@@ -518,7 +501,7 @@
             </div>
           </div>
 
-          <!-- ✅ B2B con CTA più forte -->
+          <!-- ✅ B2B -->
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M3 7h18"/>
@@ -546,7 +529,7 @@
         </div>
       </div>
 
-      <!-- ✅ VIDEO SPOSTATO QUI (approfondimento, non blocco conversione) -->
+      <!-- ✅ Video -->
       <div class="section">
         <h2>Video</h2>
         <div class="video" aria-label="Video di presentazione">
@@ -565,7 +548,6 @@
       <div class="section">
         <h2>Dove ci trovi</h2>
         <div class="grid">
-
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 21s-6-5.33-6-10a6 6 0 1 1 12 0c0 4.67-6 10-6 10z"/>
@@ -595,7 +577,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -603,7 +584,6 @@
       <div class="section alt">
         <h2>Shop</h2>
         <div class="grid">
-
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M6 6h15l-1.5 9h-12z"/><path d="M6 6l-2-2H2"/><circle cx="9" cy="20" r="1.5"/><circle cx="18" cy="20" r="1.5"/>
@@ -634,7 +614,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -739,7 +718,7 @@
     </div>
   </div>
 
-  <!-- Instagram deep-link + fallback -->
+  <!-- ✅ Instagram deep-link + fallback -->
   <script>
   (function(){
     var a = document.querySelector('.ig-open');
