--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <title>Azienda Agricola Moretti</title>
   <meta name="description" content="Hub contatti - Azienda Agricola Moretti" />
 
-  <!-- ✅ TODO: sostituisci OWNER con il tuo username GitHub o l'URL reale -->
-  <link rel="canonical" href="https://OWNER.github.io/azienda-agricola-moretti/" />
+  <link rel="canonical" href="https://azienda-agricola-moretti.github.io/azienda-agricola-moretti/" />
 
   <!-- Social preview -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
   <meta property="og:title" content="Azienda Agricola Moretti" />
   <meta property="og:description" content="Contatti, indicazioni, social e shop ufficiale" />
-  <meta property="og:url" content="https://OWNER.github.io/azienda-agricola-moretti/" />
-  <meta property="og:image" content="https://OWNER.github.io/azienda-agricola-moretti/og.jpg" />
+  <meta property="og:url" content="https://azienda-agricola-moretti.github.io/azienda-agricola-moretti/" />
+  <meta property="og:image" content="https://azienda-agricola-moretti.github.io/azienda-agricola-moretti/og.jpg" />
 
   <meta name="theme-color" content="#2C1C14" />
 
@@ -27,8 +26,8 @@
 
   <style>
     :root{
-      --brand:#2C1C14;     /* marrone profondo */
-      --olive:#6F7C4B;     /* oliva soft */
+      --brand:#2C1C14;
+      --olive:#6F7C4B;
 
       --bg:#FFFFFF;
       --cream:#FBF8F5;
@@ -161,7 +160,7 @@
       backdrop-filter: blur(8px);
     }
 
-    /* AZIONI TOP */
+    /* ✅ TOP CTA: 4 slot (2x2 appena possibile) */
     .actions{
       padding:14px 18px 18px;
       display:grid;
@@ -170,9 +169,8 @@
       border-top:1px solid var(--line);
       background:#fff;
     }
-    @media (min-width:560px){
+    @media (min-width:420px){
       .actions{ grid-template-columns: 1fr 1fr; }
-      .actions .btn.full{ grid-column: 1 / -1; }
     }
 
     .btn{
@@ -193,6 +191,7 @@
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
+      text-align:center;
     }
     .btn:hover{box-shadow:var(--shadow2); transform:translateY(-1px); border-color: rgba(44,28,20,.20)}
     .btn:active{transform:translateY(0px); box-shadow:0 8px 18px rgba(11,18,32,.10)}
@@ -205,13 +204,13 @@
       box-shadow:0 14px 26px rgba(44,28,20,.18);
     }
 
-    /* SEZIONI */
     .section{
       border-top:1px solid var(--line);
       padding:18px;
       background:#fff;
     }
     .section.alt{ background: var(--cream); }
+
     .section h2{
       margin:0 0 12px;
       font-size:13px;
@@ -273,7 +272,7 @@
       color: currentColor;
     }
 
-    /* mini CTA B2B */
+    /* mini CTA B2B -> pagina collaborazioni */
     .mini-cta{
       display:inline-flex;
       align-items:center;
@@ -289,7 +288,7 @@
     .mini-cta:hover{box-shadow:var(--shadow2); text-decoration:none}
     .mini-cta .i{margin-top:0}
 
-    /* VIDEO (solo per chi scorre) */
+    /* Video */
     .video{
       margin:14px auto 0;
       max-width: 600px;
@@ -308,7 +307,7 @@
       .video iframe{height: 280px;}
     }
 
-    /* SOCIAL */
+    /* Social */
     .social-row{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -350,7 +349,7 @@
       letter-spacing:.01em;
     }
 
-    /* STICKY */
+    /* Sticky: 3 azioni top */
     .sticky{
       position:fixed;
       left:0; right:0; bottom:0;
@@ -410,7 +409,6 @@
         <img class="logo" src="./logo%20moretti.jpg" alt="Azienda Agricola Moretti" loading="eager" decoding="async">
       </div>
 
-      <!-- ✅ HERO pulito -->
       <div class="hero">
         <h1>Azienda Agricola Moretti</h1>
         <div class="divider"></div>
@@ -428,8 +426,7 @@
         </div>
       </div>
 
-      <!-- ✅ TOP CTA -->
-      <!-- TODO: sostituisci WHATSAPP_NUMBER con il numero reale (solo numeri: 39...) -->
+      <!-- ✅ TOP CTA (4) -->
       <div class="actions">
         <a class="btn primary"
            href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20ho%20scansionato%20il%20vostro%20QR%20code%20e%20vorrei%20informazioni%20su%20prodotti%20e%20disponibilit%C3%A0."
@@ -437,31 +434,41 @@
           <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
             <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
           </svg>
-          Scrivi su WhatsApp
+          WhatsApp
         </a>
 
-        <a class="btn"
-           href="tel:+390688936064"
-           aria-label="Chiama Azienda Agricola Moretti">
+        <a class="btn" href="tel:+390688936064" aria-label="Chiama Azienda Agricola Moretti">
           <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
           </svg>
-          Chiama ora
+          Chiama
         </a>
 
-        <a class="btn full"
+        <a class="btn"
            href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
            target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
-           aria-label="Avvia navigazione verso Azienda Agricola Moretti (Marino)">
+           aria-label="Avvia navigazione verso Marino">
           <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M21 10l-9 11-9-11a9 9 0 1 1 18 0z"/>
             <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
           </svg>
-          Avvia navigazione (Marino)
+          Naviga
+        </a>
+
+        <!-- ✅ vCard -->
+        <a class="btn"
+           href="./moretti.vcf"
+           download="Azienda_Agricola_Moretti.vcf"
+           aria-label="Salva contatto in rubrica">
+          <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+            <circle cx="12" cy="7" r="4"/>
+          </svg>
+          Salva contatto
         </a>
       </div>
 
-      <!-- ✅ Produzioni -->
+      <!-- Produzioni -->
       <div class="section alt">
         <h2>Le nostre produzioni</h2>
         <div class="grid">
@@ -501,7 +508,7 @@
             </div>
           </div>
 
-          <!-- ✅ B2B -->
+          <!-- ✅ B2B -> Collaborazioni -->
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M3 7h18"/>
@@ -509,19 +516,19 @@
               <path d="M9 7V4h6v3"/>
             </svg>
             <div>
-              <b>Dettaglio &amp; Ingrosso (B2B)</b>
-              <div class="small">Forniture per ristorazione, negozi e distributori.</div>
+              <b>Collaborazioni &amp; Forniture (B2B)</b>
+              <div class="small">Ristorazione, negozi e distributori: invia richiesta con dati e P.IVA.</div>
 
               <a class="mini-cta"
-                 href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20disponibilit%C3%A0%20settimanale%20e%20listino%20B2B."
+                 href="https://aziendamoretti.com/pages/collaborazioni"
                  target="_blank" rel="noopener noreferrer"
-                 aria-label="Richiedi listino B2B su WhatsApp">
+                 aria-label="Vai al form collaborazioni B2B">
                 <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
                   <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
                   <path d="M17 3h4v4"/>
                   <path d="M10 14L21 3"/>
                 </svg>
-                Richiedi listino B2B
+                Vai al form B2B
               </a>
             </div>
           </div>
@@ -529,7 +536,7 @@
         </div>
       </div>
 
-      <!-- ✅ Video -->
+      <!-- Video -->
       <div class="section">
         <h2>Video</h2>
         <div class="video" aria-label="Video di presentazione">
@@ -544,10 +551,11 @@
         </div>
       </div>
 
-      <!-- ✅ Dove ci trovi -->
+      <!-- Dove ci trovi -->
       <div class="section">
         <h2>Dove ci trovi</h2>
         <div class="grid">
+
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 21s-6-5.33-6-10a6 6 0 1 1 12 0c0 4.67-6 10-6 10z"/>
@@ -577,13 +585,15 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
 
-      <!-- ✅ Shop -->
+      <!-- Shop -->
       <div class="section alt">
         <h2>Shop</h2>
         <div class="grid">
+
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M6 6h15l-1.5 9h-12z"/><path d="M6 6l-2-2H2"/><circle cx="9" cy="20" r="1.5"/><circle cx="18" cy="20" r="1.5"/>
@@ -614,10 +624,11 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
 
-      <!-- ✅ Orari -->
+      <!-- Orari -->
       <div class="section">
         <h2>Orari (Marino)</h2>
         <div class="grid">
@@ -637,7 +648,7 @@
         </div>
       </div>
 
-      <!-- ✅ Social -->
+      <!-- Social -->
       <div class="section alt">
         <h2>Social</h2>
         <div class="social-row">
@@ -684,10 +695,9 @@
     </div>
   </div>
 
-  <!-- ✅ Sticky bar -->
+  <!-- Sticky bar -->
   <div class="sticky" aria-label="Azioni rapide">
     <div class="inner">
-
       <a class="sbtn primary"
          href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20ho%20scansionato%20il%20vostro%20QR%20code%20e%20vorrei%20informazioni."
          aria-label="WhatsApp">
@@ -707,18 +717,17 @@
       <a class="sbtn"
          href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
          target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
-         aria-label="Navigazione">
+         aria-label="Naviga">
         <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
           <path d="M21 10l-9 11-9-11a9 9 0 1 1 18 0z"/>
           <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
         </svg>
         <span class="lbl">Naviga</span>
       </a>
-
     </div>
   </div>
 
-  <!-- ✅ Instagram deep-link + fallback -->
+  <!-- Instagram deep-link + fallback -->
   <script>
   (function(){
     var a = document.querySelector('.ig-open');
